# aura

./: Dockerfile  README.MD  pyproject.toml
aura/: bot.py
aura/cogs/general/: error.py  help.py  module.py  permission.py  settings.py
aura/cogs/karma/: leaderboard.py  producer.py  profile.py  reduce.py
aura/core/: datasource.py  decorator.py
aura/core/service/: mongo_service.py  validation_service.py
aura/util/: constants.py  embedutil.py  util.py
tests/: test_blacklist.py  test_karma.py
